Update cofing and add wandb config.

--- a/config.json
+++ b/config.json
@@ -5,11 +5,12 @@
         "epochs": 100000,
         "learning_rate": 1e-4,
         "sigma": 1.0,
-        "iters_per_checkpoint": 2000,
-        "batch_size": 12,
+        "iters_per_checkpoint": 1000,
+        "batch_size": 8,
         "seed": 1234,
         "checkpoint_path": "",
-        "with_tensorboard": false
+        "with_tensorboard": false,
+        "with_wandb": true
     },
     "data_config": {
         "training_files": "train_files.txt",
