Add functionality to import pretrained wieghts.

--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
         "batch_size": 8,
         "seed": 1234,
         "checkpoint_path": "",
+        "pretrained_path": "",
         "with_tensorboard": false,
         "with_wandb": true
     },
