--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "train_config": {
-        "fp16_run": true,
+        "fp16_run": false,
         "output_directory": "checkpoints",
         "epochs": 100000,
         "learning_rate": 1e-4,
@@ -10,12 +10,12 @@
         "seed": 1234,
         "grad_clip_thresh": 1.0,
         "checkpoint_path": "",
-        "pretrained_path": "",
+        "pretrained_path": "/data2/sungjaecho/pretrained/waveglow_256channels_universal_v5.pt",
         "with_tensorboard": false,
         "with_wandb": true
     },
     "data_config": {
-        "training_files": "train_files.txt",
+        "training_files": "file_lists/03_KETTS_KETTS2_KSS_NC_upsampled/train_files.txt",
         "segment_length": 16000,
         "sampling_rate": 22050,
         "filter_length": 1024,
