--- a/config.json
+++ b/config.json
@@ -22,7 +22,8 @@
         "hop_length": 256,
         "win_length": 1024,
         "mel_fmin": 0.0,
-        "mel_fmax": 8000.0
+        "mel_fmax": 8000.0,
+        "from_mel": false
     },
     "dist_config": {
         "dist_backend": "nccl",
